--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
 			<div class="container">
 				<ul class="list-info clearfix">
 					<li class="ico ico-1">
-						<p>Лимитированные
+						<p>Лимитированные<br>
 коллекции</p>
 					</li>
 					<li class="ico ico-2">
-						<p>Специальные
+						<p>Специальные<br>
 Предложения</p>
 					</li>
 					<li class="ico ico-3">
-						<p>Техническая
+						<p>Техническая<br>
 поддержка 24/7</p>
 					</li>
 					<li class="ico ico-4">
-						<p>Мастер-
+						<p>Мастер-<br>
 классы</p>
 					</li>
 					<li class="ico ico-5">
-						<p>Дегустация
+						<p>Дегустация<br>
 в бутиках</p>
 					</li>
 				</ul>
