--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 				<div class="container">
 					<div class="text-block">
 					<p class="light">Номер участника Клуба №XXXXX</p>
-					<h2>Благодарим <br>
-за обращение!</h2>
-<p>Являясь Участником Клуба Nespresso, у вас есть доступ к эксклюзивным привилегиям. Вы можете первыми узнавать о новых лимитированных коллекциях, индивидуальных специальных предложениях, закрытых мероприятиях, посещать дегустации новых блендов в Бутиках, а также получать подменную кофемашину в исключительных случаях неисправности Вашей.</p>
+					<h2>Константин Константинов,<br>благодарим за обращение!</h2>
+<p>Для Участников Клуба Nespresso доступны эксклюзивные привилегии. Вы первыми узнаете о новых лимитированных коллекциях, некоторые из них доступны всего несколько дней. Мы также рады информировать Вас об индивидуальных специальных предложениях, промо-акциях и  закрытых мероприятиях. Также доступен сервис получения подменной кофемашины в исключительных случаях неисправности Вашей.</p>
 					</div>
 				</div>
 		</section>
