--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <label class='tgl-btn' for='toggle'></label>
 								</div>
 								<div class="info"><p>
-									Я согласен получать сообщения о специальных предложениях и новости
+									Я согласен(-на) получать сообщения о специальных предложениях и новости
 от Клуба Nespresso на указанный ниже адрес электронной почты.</p>
 								</div>
 								<div class="input-wrap">
@@ -79,7 +79,7 @@
 									<input class='tgl tgl-ios' id='toggle-2' type='checkbox'>
 <label class='tgl-btn' for='toggle-2'></label>
 								</div>
-								<div class="info"><p>Я согласен получать сообщения о специальных предложениях и новости от Клуба Nespresso посредством СМС-сообщений на указанный мной номер телефона.</p></div>	
+								<div class="info"><p>Я согласен(-на) получать сообщения о специальных предложениях и новости от Клуба Nespresso посредством СМС-сообщений на указанный мной номер телефона.</p></div>	
 								<div class="input-wrap">
 									<input type="text" class="input-style" placeholder="Ваш телефон">
 								</div>
@@ -89,7 +89,7 @@
 									<input class='tgl tgl-ios' id='toggle-3' type='checkbox'>
 <label class='tgl-btn' for='toggle-3'></label>
 								</div>
-								<div class="info"><p>Я согласен получать сообщения о специальных предложениях и новости от Клуба Nespresso посредством звонков на указанный мной номер телефона.</p></div>
+								<div class="info"><p>Я согласен(-на) получать сообщения о специальных предложениях и новости от Клуба Nespresso посредством звонков на указанный мной номер телефона.</p></div>
 									<div class="input-wrap">
 									<button class="input-style">Сохранить</button>
 								</div>
